unbreak relative time!

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@
 html
   head
     title= title
-    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic,greek,latin&v1')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans:400&subset=cyrillic,greek,latin&v1')
     link(rel='stylesheet', href='/css/z.min.css?'+(new Date()).getTime())
     meta(http-equiv='X-UA-Compatible', content='IE=9')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js')
