--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,5 @@ html
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/scriptaculous/1.9.0/scriptaculous.js')
     script(type='text/javascript', src='/js/libs.min.js?'+(new Date()).getTime())
+    script(type='text/javascript', src='/js/z.min.js?'+(new Date()).getTime())
   body!= body
