--- a/views/home.jade
+++ b/views/home.jade
@@ -2,7 +2,7 @@
   #sub-nav
     ul.tabbed
       li(style='float: right;', class='navigation')
-        a#logout(href='#')
+        a#logout(href='#', onclick='return false;')
       li(style='float: right;', class='navigation')
         a#settings(href='/account/settings')
       li#image(style='display: none; float: right;', title='drop images here!', class='navigation')
