--- a/views/home.jade
+++ b/views/home.jade
@@ -1,6 +1,6 @@
 #float(class='comment-list-wrapper')
   #sub-nav
-    ul.tabbed
+    ul(class='tabbed')
       li(style='float: right;', class='navigation')
         a#logout(href='#', onclick='return false;')
       li(style='float: right;', class='navigation')
@@ -10,20 +10,21 @@
         a#pause(href='#')
       li(style='float: right;', class='navigation')
         span#paused-count(style='display: none;') (0)
+    ul#tabbed(class='tabbed')
       li(class='navigation')
-        a#home-timeline-click(href='#', onclick='return false;', class='current-tab')
+        a#home-timeline-click(href='#home-timeline')
       li(class='navigation')
-        a#mentions-timeline-click(href='#', onclick='return false;')
+        a#mentions-timeline-click(href='#mentions-timeline')
       li(class='navigation')
-        a#dms-inbox-timeline-click(href='#', onclick='return false;')
+        a#dms-inbox-timeline-click(href='#dms-inbox-timeline')
       li(class='navigation')
-        a#dms-outbox-timeline-click(href='#', onclick='return false;')
+        a#dms-outbox-timeline-click(href='#dms-outbox-timeline')
       li
         input#new-dm-user(type='text', maxlength='16', style='display: none; font-size: 0.65em; max-height: 5px; max-width: 85px;')
         #autocompleter-dm(class='autocomplete', style='font-size: 0.8em; width: 100%; display: none;')
     .clearer &nbsp;
   form#new-tweet-form(autocomplete='off')
-    input#new-tweet(type='text', disabled='disabled', style='width: 98%;', value='loading...')
+    input#new-tweet(type='text', disabled='disabled', style='width: 98.5%;', value='loading...')
     #autocompleter(class='autocomplete', style='width: 98%; display: none;')
 
 #container(class='comment-list-wrapper')
