improvements, bring back the fave button

--- a/views/home.jade
+++ b/views/home.jade
@@ -19,6 +19,8 @@
         a#dms-inbox-timeline-click(href='#dms-inbox-timeline')
       li(class='navigation')
         a#dms-outbox-timeline-click(href='#dms-outbox-timeline')
+      li(class='navigation')
+        a#threaded-timeline-click(href='#threaded-timeline')
       li
         input#new-dm-user(type='text', maxlength='16', style='display: none; font-size: 0.65em; max-height: 5px; max-width: 85px;')
         #autocompleter-dm(class='autocomplete', style='font-size: 0.8em; width: 100%; display: none;')
