--- a/views/home.jade
+++ b/views/home.jade
@@ -10,6 +10,8 @@
         a#pause(href='#')
       li(style='float: right;', class='navigation')
         span#paused-count(style='display: none;') (0)
+      li(style='float: right;', class='navigation')
+        div#progress-bar(style='display: none;')
     ul#tabbed(class='tabbed')
       li(class='navigation')
         a#home-timeline-click(href='#home-timeline')
