hit commit too quick, heres the other half of it

--- a/views/home.jade
+++ b/views/home.jade
@@ -24,7 +24,7 @@
       li(class='navigation')
         a#threaded-timeline-click(href='#threaded-timeline')
       li
-        input#new-dm-user(type='text', maxlength='16', style='display: none; font-size: 0.65em; max-height: 5px; max-width: 85px;')
+        input#new-dm-user(type='text', maxlength='15', class='dm-user', style='display: none;')
         #autocompleter-dm(class='autocomplete', style='font-size: 0.8em; width: 100%; display: none;')
     .clearer &nbsp;
   form#new-tweet-form(autocomplete='off')
