--- a/public/css/z.css
+++ b/public/css/z.css
@@ -56,6 +56,26 @@ fieldset
 	padding: 10px;
 	behavior: url(border-radius.htc);
 }
+footer
+{
+	/* do something at the bottom of the page eventually, probably a "load more" button */
+}
+header
+{
+	box-shadow: 0 0 5px 5px #f6f6f6;
+	background-color: #f6f6f6;
+	display: block;
+	height: 90px;
+	width: 99%;
+	left: 0px;
+	position: fixed;
+	top: 0px;
+	z-index: 500;
+	-khtml-box-shadow: 0 0 2px 5px #f6f6f6;
+	-moz-box-shadow: 0 0 2px 5px #f6f6f6;
+	-o-box-shadow: 0 0 2px 5px #f6f6f6;
+	-webkit-box-shadow: 0 0 2px 5px #f6f6f6;
+}
 legend
 {
 	border-radius: 4px;
@@ -82,7 +102,6 @@ legend
 {
 	text-shadow: rgba(215,215,215,0.3) 5px 5px 8px;
 	cursor: default;
-	font: normal 90% "Open Sans", sans-serif;
 	font-size: 68px;
 	color: #555;
 	letter-spacing: -1px;
@@ -91,26 +110,18 @@ legend
 }
 .large, h2
 {
-	font: normal 90% "Open Sans", sans-serif;
 	font-size: 42px;
 	color: #555;
-	line-height: 48px;
 	letter-spacing: -1px;
 	text-align: center;
 }
 .big, h3
 {
 	font-size: 26px;
-	line-height: 36px;
-}
-.normal, body
-{
-	font: normal 80% "Open Sans", sans-serif;
 }
 .small, small
 {
 	font-size: 13px;
-	line-height: 18px;
 }
 .left,.alignleft
 {
@@ -128,7 +139,6 @@ legend
 {
 	display: block;
 	font-size: 0;
-	line-height: 0;
 	height: 0;
 }
 
@@ -363,7 +373,7 @@ input, textarea
 	border-radius: 4px;
 	box-shadow: 0 0 4px #e2e2e2, inset 0 0 4px #e2e2e2;
 	color: #4d4d4d;
-	font-family: "Open Sans", sans-serif;
+	font-family: "Helvetica Neue", "Open Sans", sans-serif;
 	padding: 8px 12px;
 	resize: none;
 	transition: all .20s ease-in-out;
@@ -777,18 +787,6 @@ div.autocomplete ul li.selected
 	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
 	behavior: url(border-radius.htc);
 }
-#control_contextmenu
-{
-	animation: fadein 0.5s ease-in-out;
-	-moz-animation: fadein 0.5s ease-in-out;
-	-webkit-animation: fadein 0.5s ease-in-out;
-}
-#control_contextmenu_fadeout
-{
-	animation: fadeout 0.5s ease-in-out;
-	-moz-animation: fadeout 0.5s ease-in-out;
-	-webkit-animation: fadeout 0.5s ease-in-out;
-}
 #control_contextmenu ul li
 {
 	border-radius: 4px;
@@ -804,7 +802,7 @@ div.autocomplete ul li.selected
 }
 #control_contextmenu ul li:hover
 {
-	background-color: #f6f6f6;
+	background-color: #eee;
 }
 #control_contextmenu ul li:hover.disabled
 {
@@ -827,7 +825,7 @@ div.autocomplete ul li.selected
 {
 	position: absolute;
 	max-width: 500px;
-	z-index: 100;
+	z-index: 600;
 }
 .ot-container.ot-fixed
 {
@@ -852,7 +850,6 @@ div.autocomplete ul li.selected
 {
 	position: relative;
 	font-size: 13px;
-	line-height: 120%;
 }
 .opentip .title   { font-weight: bold; }
 .opentip .content { width: auto !important;}
@@ -1042,22 +1039,6 @@ div.autocomplete ul li.selected
 	left: 0;
 	right: 0;
 }
-#float
-{
-	box-shadow: 0 0 5px 5px #f6f6f6;
-	background-color: #f6f6f6;
-	display: block;
-	height: 90px;
-	width: 99%;
-	left: 0px;
-	position: fixed;
-	top: 0px;
-	z-index: 500;
-	-khtml-box-shadow: 0 0 2px 5px #f6f6f6;
-	-moz-box-shadow: 0 0 2px 5px #f6f6f6;
-	-o-box-shadow: 0 0 2px 5px #f6f6f6;
-	-webkit-box-shadow: 0 0 2px 5px #f6f6f6;
-}
 .login-inner
 {
 	display: inline-block;
@@ -1143,9 +1124,8 @@ body
 {
 	background: #f6f6f6;
 	color: #3a3a4a;
-	font: normal 75% "Open Sans", sans-serif;
+	font: normal 75% "Helvetica Neue", "Open Sans", sans-serif;
 	font-smoothing: subpixel-antialiased;
-	line-height: 1.5;
 	margin: 0 auto;
 	position: relative;
 	user-select: none;
@@ -1187,7 +1167,7 @@ body
 	}
 	.normal, body
 	{
-		font: normal 67% "Open Sans", sans-serif;
+		font: normal 67% "Helvetica Neue", "Open Sans", sans-serif;
 	}
 	.klout
 	{
@@ -1236,7 +1216,7 @@ body
 	}
 	.normal, body
 	{
-		font: normal 68% "Open Sans", sans-serif;
+		font: normal 68% "Helvetica Neue", "Open Sans", sans-serif;
 	}
 	.klout
 	{
@@ -1261,7 +1241,7 @@ body
 	}
 	.normal, body
 	{
-		font: normal 70% "Open Sans", sans-serif;
+		font: normal 70% "Helvetica Neue", "Open Sans", sans-serif;
 	}
 }
 @media only screen and (min-width: 800px) and (max-width: 1024px)
@@ -1282,7 +1262,7 @@ body
 	}
 	.normal, body
 	{
-		font: normal 73% "Open Sans", sans-serif;
+		font: normal 73% "Helvetica Neue", "Open Sans", sans-serif;
 	}
 }
 @media only screen and (min-width: 1024px) and (max-width: 1152px)
@@ -1303,7 +1283,7 @@ body
 	}
 	.normal, body
 	{
-		font: normal 76% "Open Sans", sans-serif;
+		font: normal 76% "Helvetica Neue", "Open Sans", sans-serif;
 	}
 }
 @media only screen and (min-width: 1152px) and (max-width: 1350px)
@@ -1324,7 +1304,7 @@ body
 	}
 	.normal, body
 	{
-		font: normal 79% "Open Sans", sans-serif;
+		font: normal 79% "Helvetica Neue", "Open Sans", sans-serif;
 	}
 }
 @media only screen and (min-width: 1350px) and (max-width: 1600px)
@@ -1345,7 +1325,7 @@ body
 	}
 	.normal, body
 	{
-		font: normal 81% "Open Sans", sans-serif;
+		font: normal 81% "Helvetica Neue", "Open Sans", sans-serif;
 	}
 }
 @media only screen and (min-width: 1600px)
@@ -1366,6 +1346,6 @@ body
 	}
 	.normal, body
 	{
-		font: normal 86% "Open Sans", sans-serif;
+		font: normal 86% "Helvetica Neue", "Open Sans", sans-serif;
 	}
 }
