--- a/views/home.jade
+++ b/views/home.jade
@@ -24,10 +24,11 @@ header(class='comment-list-wrapper')
       li(class='navigation')
         a#threaded-timeline-click(href='#threaded-timeline')
       li
-        input#new-dm-user(type='text', maxlength='15', class='dm-user', style='display: none;')
+        input#new-dm-user(type='text', maxlength='15', class='dm-user dm', style='display: none;')
         #autocompleter-dm(class='autocomplete', style='font-size: 0.8em; width: 100%; display: none;')
     .clearer &nbsp;
   form#new-tweet-form(autocomplete='off')
+    //textarea#new-tweet(disabled='disabled', style='width: 98.5%; overflow: hidden;', rows='1', value='loading...')
     input#new-tweet(type='text', disabled='disabled', style='width: 98.5%;', value='loading...')
     #autocompleter(class='autocomplete', style='width: 98%; display: none;')
 
